# aiolibgen

./: setup.cfg
aiolibgen/: cli.py  client.py
